[metadata]
name = functest.kubernetes
version = 9
home-page = https://wiki.opnfv.org/display/functest

[files]
packages = functest_kubernetes

[entry_points]
xtesting.testcase =
    k8s_smoke = functest_kubernetes.k8stest:K8sSmokeTest
    k8s_conformance = functest_kubernetes.k8stest:K8sConformanceTest
    k8s_vims = functest_kubernetes.ims.ims:Vims
    kube_hunter = functest_kubernetes.security.security:KubeHunter
    kube_bench = functest_kubernetes.security.security:KubeBench
