[metadata]
name = functest.kubernetes
version = 9
home-page = https://wiki.opnfv.org/display/functest

[files]
packages = functest_kubernetes
scripts =
    functest_kubernetes/ci/download_images.sh

[entry_points]
xtesting.testcase =
    e2e_testing = functest_kubernetes.k8stest:E2ETesting
    xrally_kubernetes = functest_kubernetes.rally.rally_kubernetes:RallyKubernetes
    k8s_vims = functest_kubernetes.ims.ims:K8sVims
    helm_vims = functest_kubernetes.ims.ims:HelmVims
    kube_hunter = functest_kubernetes.security.security:KubeHunter
    kube_bench = functest_kubernetes.security.security:KubeBench
    cnf_testsuite = functest_kubernetes.cnf_conformance.conformance:CNFConformance
    netperf = functest_kubernetes.netperf.netperf:Netperf
